# luthien-proxy

./: .coverage  .dockerignore  .env.example  .env.local.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .worktree-purpose  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  REFERENCE.md  STALE_TEST.md  TRAJECTORY_SAMI_README.md  coverage.json  dev-README.md  docker-compose.dummy.yaml  docker-compose.mock-bridge.yaml  docker-compose.mock.yaml  docker-compose.yaml  lessextremelysketchyhelloworld_evilhacks.py  main.py  plan.md  pyproject.toml  railway.toml  render.yaml  smoke_test.db-shm  smoke_test.db-wal  test_redirects.py
.claude/: settings.local.json
.serena/: project.yml
changelog.d/: 351-openai-removal.md  708-warning-before-tool-use.md  README.md  add-value-prop.md  admin-config-put-e2e-regression.md  agent-tutorial-cli.md  api-key-auth-cleanup.md  auth-role-separation.md  auto-browse-recent.md  auto-release-proxy.md  autofix-per-concern.md  automated-maintenance.md  batch-env-var-validation.md  before-after-backend.md  billing-badge-improvements.md  chain-policy-ux.md  claude-auto-start-gateway.md  claude-md-rules.md  cleanup-stale-litellm-context.md  cli-absolute-paths.md  cli-autopublish.md  cli-luthien-policy.md  cli-uvx-migration.md  client-disconnect-detection.md  codebase-pain-points.md  coe-356-gotchas.md  consolidate-conversation-views.md  conversation-link-pydantic-config.md  conversation-viewer-dedup.md  credential-management.md  credentials-ui-discoverability.md  database-pool-test-construction.md  deai-policy.md  deai-preset.md  demo-infra.md  dev-checks-fast-mode.md  dev-checks-parallel.md  dev-checks-timing.md  dev-checks-xdist.md  dev-md-triage.md  (+169 more)
config/: debug_callback.py  demo_judge.yaml  litellm_callback.py  litellm_config.yaml  litellm_config_unified.yaml  local_llm_config.yaml  luthien_config.yaml  luthien_demo_config.yaml  parallel_rules_example.yaml  parallel_rules_test.yaml  policy_config.yaml  policy_default.yaml  policy_logging.yaml  railway_policy_config.yaml  replay_callback.py  unified_callback.py  v2_config.yaml
deploy/: ENDPOINT_QUICKSTART.md  README.md
dev/: ARCHITECTURE.md  AUDIT.md  DOGFOODING_POLICY_SESSION_NOTES.md  FORMAT_TRACKING_GUIDE.md  GRAFANA_QUERIES.md  LIVE_POLICY_DEMO.md  LUTHIEN_DATA_REFERENCE.md  NOTES.md  OBJECTIVE.md  OBSERVABILITY_DEMO.md  OTEL_MIGRATION_PROGRESS.md  PICKUP-TOMORROW.md  PR_113_changes_summary.md  README.md  REQUEST_PROCESSING_ARCHITECTURE.md  STREAMING_DOCS_AUDIT.md  SYNC.md  TODO.md  VIEWING_TRACES_GUIDE.md  WEB_UI_CONSOLIDATION_STRATEGY.md  credential_management_spec.md  demo_baseline.sqlite  demo_plan.md  endpoint_audit.md  event_driven_policy_guide.md  feb26-limiting-factor.md  feb26-shipping-log-update.md  feb26-weekly-checkin.md  gateway-end-to-end-flow.md  hackathon-ideas-2026.md  maintainability_plan.md  meeting-2026-03-18.md  observability-v2-implementation-plan.md  observability-v2.md  observability.md  observability_sink_refactor.md  onboarding_bug_report.md  peter-qadna-qa-trial-debrief.md  pipeline-architecture-solid-analysis.md  pipeline-refactor-spec-v2.md  (+27 more)
docker/: Dockerfile.control-plane  Dockerfile.gateway  Dockerfile.litellm  Dockerfile.local-llm  Dockerfile.migrations  Dockerfile.sami  Dockerfile.standalone  Dockerfile.v2-gateway  local-llm-entrypoint.sh  run-migrations.sh  sami-entrypoint.sh  sami-opencode.json  standalone-entry.sh  start-gateway.sh
docs/: REFERENCE.md  architecture-visual.html  database-schema.md  dataflow-diagrams.md  dataflows.md  developer-onboarding.md  diagrams.md  landing.html  plugin-header-contract.md  policies.md  readme-option-a-problem-first.md  readme-option-b-visual-flow.md  readme-option-c-use-case-first.md  readme-v5-draft.md  readme-v5a-clean-minimal.md  readme-v5b-visual-demo.md  readme-v5c-narrative.md  readme-v6.md  readme-v7.md  security-policy-loading.md  standalone-container.md
examples/: observability_usage.py
luthien-cli/: README.md  pyproject.toml
luthien-cli/src/luthien_cli/: config.py  gateway_client.py  main.py
luthien-cli/src/luthien_cli/commands/: claude.py  config_cmd.py  logs.py  onboard.py  status.py  up.py
luthien-cli/tests/: test_claude.py  test_config.py  test_config_cmd.py  test_gateway_client.py  test_integration.py  test_logs.py  test_onboard.py  test_status.py  test_up.py
migrations/: 000_init_databases.sql  001_add_policy_config_table.sql  001_initial_schema.sql  002_add_policy_instance_names.sql  002_request_logs.sql  003_add_conversation_tables.sql  003_debug_logs.sql  004_drop_legacy_control_tables.sql  005_simplify_policy_table.sql  007_add_auth_config_table.sql  007_add_conversation_transcript_view.sql  008_add_request_logs_table.sql  008_default_auth_mode_both.sql  009_add_dynamic_policies_table.sql  009_add_telemetry_config.sql  010_add_session_rules.sql  AGENTS.md  CLAUDE.md  README.md  sqlite_schema.sql
observability/: .gitignore  README.md
plugins/: README.md
prisma/: schema.prisma
saas_infra/: AGENTS.md  CLAUDE.md  README.md  __init__.py  cli.py  demo.py  models.py  provisioner.py  railway_client.py  utils.py
scripts/: _demo_manifest.py  analyze_dependencies.py  assemble_changelog.py  auth_mode_check.sh  build_replay_examples.py  capture_anthropic_sse.py  capture_chunks.py  capture_gateway_sse.sh  capture_openai_sse.py  check_agents_claude_parity.sh  check_ui_endpoints.py  claude-code  compare_anthropic_streams.py  (+74 more)
src/luthien_cli/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/luthien_cli/src/luthien_cli/: config.py  gateway_client.py  local_process.py  main.py  repo.py
src/luthien_cli/src/luthien_cli/commands/: agent_tutorial.py  claude.py  hackathon.py  logs.py  onboard.py  policy.py  restart.py  status.py  up.py
src/luthien_cli/tests/: test_agent_tutorial.py  test_claude.py  test_gateway_client.py  test_hackathon.py  test_integration.py  test_local_build_fallback.py  test_local_process.py  test_logs.py  test_onboard.py  test_onboard_error_handling.py  test_repo.py  test_restart.py  test_status.py  test_up.py
(+1506 files in other folders)
