[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "luthien-proxy"
version = "0.1.0"
description = "Redwood-style AI Control within an LLM proxy for production agentic deployments"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jai Dhyani", email = "jai@luthienresearch.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asyncpg>=0.30.0",
    "beartype>=0.21.0",
    "httpx>=0.28.1",
    "litellm[proxy]>=1.77.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "prisma>=0.15.0",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pyright",
    "pytest-timeout>=2.4.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "vulture>=2.14",
    "anthropic>=0.71.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/luthien_proxy"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "I",        # isort (import sorting)
    "D",        # pydocstyle (docstrings)
    "PLC0415",  # import-outside-toplevel: disallow imports inside functions
]
ignore = []
extend-ignore = [
    "E501",  # line too long (handled by formatter)
]
per-file-ignores = { "migrations/**" = ["ALL"], "scripts/**" = ["D"], "tests/**" = ["D", "PLC0415"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-q -ra -m 'not e2e and not integration' --cov=src/luthien_proxy --cov-report=term-missing --timeout=3 --timeout-method=signal"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
    "default::ResourceWarning",
]
markers = [
    "e2e: marks end-to-end tests that require an assembled control plane",
    "integration: marks integration tests that require external services (OpenAI, Anthropic APIs)",
]
timeout_func_only = false

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]
reportMissingTypeStubs = "none"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "pyright",
    "radon>=6.0.1",
]
