[project]
name = "luthien-cli"
version = "0.1.5"
description = "CLI tool for managing luthien-proxy gateways"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
luthien = "luthien_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luthien_cli"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
