[project]
name = "luthien-cli"
dynamic = ["version"]
description = "CLI tool for managing luthien-proxy gateways"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "simple-term-menu>=1.6.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
luthien = "luthien_cli.main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luthien_cli"]

[tool.hatch.version]
source = "vcs"
raw-options.root = "../.."
raw-options.tag_regex = "^cli-v(?P<version>\\d+(?:\\.\\d+)*)$"
# Filter git describe to only cli-v* tags — otherwise the proxy's v3.0.0 tag
# (newer than any cli-v*) trips tag_regex parsing and builds fail with:
#   UserWarning: tag 'v3.0.0' no version found
raw-options.git_describe_command = [
    "git", "describe", "--dirty", "--tags", "--long", "--match", "cli-v*",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/luthien_cli/_version.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.35.0",
    "pyyaml>=6.0",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
